@@ -467,8 +467,8 @@ FUNTAB R_FunTab[] = {
     {"gsub.perl", do_pgsub, 1, 11, 4, {PP_FUNCALL, PREC_FN, 0}},
     {"regexpr.perl", do_pregexpr, 1, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
     {"agrep", do_agrep, 1, 11, 8, {PP_FUNCALL, PREC_FN, 0}},
-    {"tolower", do_tolower, 1, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
-    {"toupper", do_toupper, 1, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
+    {"tolower", do_tolower, 0, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
+    {"toupper", do_tolower, 1, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
     {"chartr", do_chartr, 1, 11, 3, {PP_FUNCALL, PREC_FN, 0}},
     {"sprintf", do_sprintf, 1, 11, -1, {PP_FUNCALL, PREC_FN, 0}},
     {"make.unique", do_makeunique, 0, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
