@@ -18,7 +18,9 @@
  *  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
 
-/* <UTF8-FIXME> byte-level access needs checking */
+/* <UTF8-FIXME> byte-level access needs checking.
+   I think it is OK provided quotes, comment, sep and dec chars are ASCII
+*/
 
 #ifdef HAVE_CONFIG_H
 #include <config.h>
